# sentinel

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  upgrade-test-checklist.md
.claude/commands/: research.md
.claude/commands/code/: commit.md  develop.md  issue.md  memory.md  metrics-summary.md  metrics.md  readme.md  refer-single.md  refer.md
.claude/commands/content/: blog.md
.claude/skills/webapp-testing/: evaluation_test.py  run_evaluation.sh
.github/: dependabot.yml
.obsidian/: workspace.json
artifacts/templates/: api-testing.yaml  browser-agent.yaml  code-generation.yaml  data-analysis.yaml  ecommerce-agent.yaml  json-generation.yaml  langgraph-agent.yaml  langgraph-workflow.yaml  multi-agent.yaml  multi-turn.yaml  prompt-injection.yaml  reasoning.yaml  regression.yaml  simple-qa.yaml  tool-use.yaml  ui-testing.yaml
artifacts/tests/: logic-one.yaml
backend/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt  start.sh
backend/api/: __init__.py  execution.py  providers.py  recording.py  runs.py  test_files.py  tests.py
backend/core/: __init__.py  parser.py  schema.py
backend/executor/: __init__.py  executor.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
backend/regression/: __init__.py  comparator.py  engine.py
backend/services/: __init__.py  test_files.py
backend/storage/: __init__.py  database.py  models.py  repositories.py
backend/tests/: __init__.py  test_execution_api.py  test_executor.py  test_file_service.py  test_openai_integration.py  test_providers.py  test_recording.py  test_regression.py  test_storage.py  test_validators.py
backend/validators/: __init__.py  assertion_validator.py
backlog/: 02-spec-visual-first.md  03-spec-design-system.md  04-spec-llm-agents.md  05-spec-flow.md  06-spec-framework.md  07-spec-bundle.md  08-spec-code-quality.md  09-spec-tauri-upgrade.md  10-spec-system-menu.md  11-spec-test-management.md  AUDIT-fake-features.md  active.md  hotfix-0.12.1-badge-contrast.md  hotfix-0.12.1-final-improvements.md  issue.md  issues.md  release-0.1.0.md  release-0.13.0.md  release-0.14.4.md  release-0.5.0.md  release-0.8.1.md  release-0.8.2.md  release-0.9.0.md  release-0.9.2.md  someday.md  spec-01.md
blogs/: README.md
blogs/research-paper/: paper.md
blogs/sentinel-dsl-foundation/: blog-post.md
blogs/sentinel-v0-1-0-dsl-foundation/: README.md  blog-post.md  linkedin-post.md  social-media-summary.md
blogs/visual-first-design/: blog-post.md
docs/: README.md  api-reference.md  best-practices.md  design-system.md  dsl-reference.md  examples.md  getting-started.md  migration-guide.md  schema-reference.md  visual-canvas.md
docs/examples/: gallery.md
docs/guides/: assertions.md  concepts.md  installation.md  quickstart.md  test-suites.md  writing-tests.md
docs/reference/: api.md  schema.md
examples/test_specs/: browser_agent_product_search.yaml  code_generation_test.yaml  langgraph_research_agent.yaml  multi_turn_conversation.yaml  simple_qa_test.yaml  test_suite_example.yaml
frontend/: index.html  package-lock.json  package.json  package.json.backup  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/benchmarks/: bench-output.txt  build-metrics.json  build-output.txt  build-performance.ts  canvas-rendering.bench.ts  performance-baseline.md  run-all-benchmarks.ts
frontend/e2e/: create-test-from-scratch.spec.ts  template-workflow.spec.ts  yaml-roundtrip.spec.ts
frontend/metrics/: latest.md
frontend/playwright-report/: index.html
frontend/src/: App.test.tsx  App.tsx  app.css  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  main.rs
frontend/src/components/: RightPanel.tsx
frontend/src/hooks/: useAutoSave.test.ts  useAutoSave.ts  useHandleConnection.test.ts  useHandleConnection.ts  useMenuEvents.test.ts  useMenuEvents.ts  useSessionPersistence.test.ts  useSessionPersistence.ts  useTemplates.test.ts  useTemplates.ts
frontend/src/lib/: categoryConfig.ts  layout.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/services/: api.test.ts  api.ts  suiteStorage.ts  templates.test.ts  templates.ts  testFiles.test.ts  testFiles.ts
frontend/test-results/: .last-run.json
metrics/: code-complexity-2025-11-22.md  latest.md  report-2025-11-22-110439.md  report-2025-11-22-185720.md  report-20251123.md  security-audit-2025-11-22.md
refer/: README.md
refer/tauri/: v2-system-tray.md  v2-window-menu-api.md  v2-window-menu.md
releases/: hotfix-0.12.1-ui-improvements.md  release-0.10.0.md  release-0.11.0.md  release-0.12.0.md  release-0.12.1.md  release-0.14.0.md  release-0.14.1.md  release-0.14.2.md  release-0.14.3.md  release-0.14.5.md  release-0.15.0.md  release-0.16.0.md  release-0.17.0.md  release-0.18.0.md  release-0.19.0.md  release-0.2.0.md  release-0.20.0.md  release-0.21.0.md  release-0.22.0.md  release-0.23.0.md  release-0.23.1.md  release-0.24.0.md  release-0.25.0.md  release-0.26.0.md  release-0.27.0.md  release-0.28.0.md  release-0.29.0.md  release-0.3.1.md  release-0.30.0.md  release-0.31.0.md  release-0.32.0.md  release-0.33.0.md  release-0.4.0.md  release-0.4.1.md  release-0.4.2.md  release-0.4.3.md  release-0.4.4.md  release-0.6.0.md  release-0.6.1.md  release-0.7.0.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src/sentinel/: __init__.py
src/sentinel/core/: parser.py  (+2 more)
templates/: api-testing-template.yaml  browser_agent.yaml  code_generation.yaml  data-analysis-template.yaml  json-generation-template.yaml  langgraph-workflow-template.yaml  langgraph_agent.yaml  multi-agent-template.yaml  multi_turn.yaml  prompt-injection-test.yaml  reasoning-template.yaml  regression-template.yaml  simple_qa.yaml  test_suite.yaml  tool-use-template.yaml  ui-testing-template.yaml
tests/: __init__.py
tests/core/: test_parser.py  test_schema.py
tests/integration/: test_example_specs.py  test_templates.py
(+115 files in other folders)
