[package]
name = "sentinel"
version = "0.14.0"
description = "Visual-first AI agent testing and evaluation platform"
authors = ["Navam Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-fs = "2.1"
tauri-plugin-dialog = "2.1"
tauri-plugin-shell = "2.1"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
