[package]
name = "sentinel"
version = "0.27.0"
description = "Visual-first AI agent testing and evaluation platform"
authors = ["Navam Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-clipboard-manager = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2.5.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
